--- a/后台管理/houtai/index1.html
+++ b/后台管理/houtai/index1.html
@@ -5,8 +5,7 @@
 	<title>index1</title>
 	<link rel="stylesheet" type="text/css" href="css/index1.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/graduate.js"></script>
-	<script type="text/javascript" src="js/log.js"></script>
+	<script type="text/javascript" src="js/jquery.form.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			var arr1=document.getElementById("member"),
@@ -49,11 +48,7 @@
 	<div class="login">
 		<span class="cancel">×</span> 
 		<div class="login_content">
-			<!-- <form class="addMember" method="post" name="formDada" enctype="multipart/form-data">
-			</form>
-			<button type="button" class="sub">提交</button> -->
-		</div>
-		
+		</div>	
 	</div>
 	<!-- 工作室成员 -->
 	<div class="head">
@@ -151,20 +146,8 @@
 					</button>
 				</span>
 			</div>
-			<div class="show_body">
-				<table border="1" cellspacing="0" class="W_show_table">
-					<tr>
-						<td>memberId</td>
-						<td>name</td>
-						<td>sex</td>
-						<td>direction</td>
-						<td>introduction</td>
-						<td>company</td>
-						<td>photo</td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
+			<div class="graduate_show_body">
+				
 			</div>
 		</div>
 		<!-- 作品展示 -->
@@ -181,6 +164,8 @@
 		</div>
 	</div>
 	<div class="mask"></div>
+	<script type="text/javascript" src="js/graduate.js"></script>
+	<script type="text/javascript" src="js/log.js"></script>
 </body>
 </html>
 
