--- a/进度文档/李文浩/delete.html
+++ b/进度文档/李文浩/delete.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript">
         function sub1() {
-            var url = '/member/memberId/' + document.getElementById("memberId").value;
+            var url = '/geek/member/memberId/' + document.getElementById("memberId").value;
             console.log(url);
+
             $.ajax({
                 type: "post",//请求方式
-                url: '/member/memberId/' + document.getElementById("memberId").value,  //发送请求地址
+                url: '/geek/member/memberId/' + document.getElementById("memberId").value,  //发送请求地址
                 timeout: 30000,//超时时间：30秒
                 data: {
                     "_method": "delete"
