--- a/进度文档/李文浩/save.html
+++ b/进度文档/李文浩/save.html
@@ -5,14 +5,13 @@
 
     <meta charset="UTF-8">
     <title>Document</title>
-    <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery.form.js"></script>
     <script type="text/javascript">
         function saveMember() {
-            var url = "/member/memberId";
+            var url = "/geek/member/memberId";
 //            var url = "/member/memberId";
-            var form = new FormData(document.getElementById("member"));
+            var form = new FormData(document.getElementById("addMember"));
             console.log(url);
 //            form.append("_method", 'put');
 //             var req = new XMLHttpRequest();
@@ -59,7 +58,7 @@
     </script>
 
 </head>
-<body>
+<body><!-- 
 <form id="member" method="post" name="formDada" enctype="multipart/form-data">
     <input type="file" name="file"/>
     <input type="text" name="memberId" id="memberId"/>
@@ -70,7 +69,31 @@
     <input type="text" name="introduction"/>
     <input type="text" name="company"/>
     <input type="button" value="添加成员" onclick="saveMember()"/>
+</form> -->
+<form id="addMember" method="post" name="formDada" enctype="multipart/form-data">
+    <p>
+        <input type="file" name="file" class="file">
+    </p>
+    <p>
+        学号:<input type="text" class="memberId" placeholder="请输入学号" name="memberId">
+    </p>
+    <p>
+        姓名:<input type="text" class="name" placeholder="请输入姓名">
+    </p>
+    <p>
+        性别:<input type="text" class="sex" placeholder="请输入性别">
+    </p>
+    <p>
+        方向:<input type="text" class="direction" placeholder="请输入技术方向">
+    </p>
+    <p>
+        公司:<input type="text" class="company" placeholder="请输入就业公司，没有就填无">
+    </p>
+    <p>
+        简介:<textarea type="text" class="introduce" placeholder="请输入个人简介"></textarea>
+    </p>
 </form>
+<button type="button" class="addSub" onclick="saveMember()">保存添加</button>
 </br>
 </br>
 </br>
