--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 		<div class="T_writing">
 			<ul>
 				<h3>极客网工作室的成立</h3>
-				<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"极客网"工作室（原校当网）成立于2007年，是在经济管理学院实验中心指导下的进行系统设计、网站开发及运营的团队，其工作室位于经管学院2306室。 </li>
+				<li>"极客网"工作室（原校当网）成立于2007年，是在经济管理学院实验中心指导下的进行系统设计、网站开发及运营的团队，其工作室位于经管学院2306室。 </li>
 			</ul>
 			<ul>
 				<h3>极客网工作室的发展</h3>
-				<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"极客网"多年来培养了一大批IT人才，设计开发出许多优秀的项目。其下设美工、Web前台、Web后台、网站运营四个小组，主要学习和运用PS+HTML+ CSS+JS+Java+Mysql、Linux+Apache+Mysql+PHP（LAMP）以及Android手机开发等技术。成员毕业后，有90%就业于腾讯、阿里巴巴、 百度、华为等知名企业。
+				<li>"极客网"多年来培养了一大批IT人才，设计开发出许多优秀的项目。其下设美工、Web前台、Web后台、网站运营四个小组，主要学习和运用PS+HTML+ CSS+JS+Java+Mysql、Linux+Apache+Mysql+PHP（LAMP）以及Android手机开发等技术。成员毕业后，有90%就业于腾讯、阿里巴巴、 百度、华为等知名企业。
 				</li>
 			</ul>
 			<ul>
 				<h3>极客网工作室的未来</h3>
-				<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;极客网在老师和同学的共同努力下，不断发展和壮大，欢迎有兴趣和志向的同学积极加入我们，共创美好未来!</li>
+				<li>极客网在老师和同学的共同努力下，不断发展和壮大，欢迎有兴趣和志向的同学积极加入我们，共创美好未来!</li>
 			</ul>
 		</div>
 
@@ -170,45 +170,37 @@
 				</div>
 			</div>
 		</div>
-		<!-- <div id="T_lable">
-			<ul>
-				<li>2012</li>
-				<li>2013</li>
-				<li class="T_selected">2014</li>
-				<li>2015</li>
-			</ul>
-		</div> -->
 	</div>
 
 	<div id="T_memberMain">
 		<div class="T_container">
-			<div class="T_carousel">
-				<ul class="T_2012">
-					
-				</ul>
-				<ul class="T_2013">
-					
-				</ul>
-				<ul class="T_2014">
-					<figure><img src="image/T_1.jpg" alt=""></figure>
-					<figure><img src="image/T_2.jpg" alt=""></figure>
-					<figure><img src="image/T_3.jpg" alt=""></figure>
-					<figure><img src="image/T_4.jpg" alt=""></figure>
-					<figure><img src="image/T_5.jpg" alt=""></figure>
-					<figure><img src="image/T_6.jpg" alt=""></figure>
-					<figure><img src="image/T_7.jpg" alt=""></figure>
-					<figure><img src="image/T_8.jpg" alt=""></figure>
-					<figure><img src="image/T_9.jpg" alt=""></figure>
-					<figure><img src="image/T_10.png" alt=""></figure>
-					<figure><img src="image/T_11.png" alt=""></figure>
-					<figure><img src="image/T_12.png" alt=""></figure>
-					<figure><img src="image/T_13.png" alt=""></figure>
-				</ul>
-				<ul class="T_2015">
-
-				</ul>
-			</div>
-		</div>		
+			<!-- <ul class="T_2012"></ul>
+			<ul class="T_2013"></ul>
+			<ul class="T_2014"> -->
+				<!-- <figure><img src="image/T_1.jpg" alt=""></figure>
+				<figure><img src="image/T_2.jpg" alt=""></figure>
+				<figure><img src="image/T_3.jpg" alt=""></figure>
+				<figure><img src="image/T_4.jpg" alt=""></figure>
+				<figure><img src="image/T_5.jpg" alt=""></figure>
+				<figure><img src="image/T_6.jpg" alt=""></figure>
+				<figure><img src="image/T_7.jpg" alt=""></figure>
+				<figure><img src="image/T_8.jpg" alt=""></figure>
+				<figure><img src="image/T_9.jpg" alt=""></figure>
+				<figure><img src="image/T_10.png" alt=""></figure>
+				<figure><img src="image/T_11.png" alt=""></figure>
+				<figure><img src="image/T_12.png" alt=""></figure>
+				<figure><img src="image/T_13.png" alt=""></figure> -->
+			<!-- </ul> -->
+			<ul class="T_2015"></ul>
+		</div>
+		<div id="T_lable">
+			<ul>
+				<li>2012</li>
+				<li>2013</li>
+				<li>2014</li>
+				<li class="T_selected">2015</li>
+			</ul>
+		</div>			
 	</div>
 </div>
 
@@ -252,10 +244,12 @@
 <script src="js/shouye.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/aboutUs.js"></script>
 <script type="text/javascript" src="js/aboutMember.js"></script>
+<!-- <script type="text/javascript" src="js/prefixfree.min.js"></script> -->
 <script type="text/javascript" src="js/graduate.js"></script>
 <script type="text/javascript" src="js/chengguo.js"></script>
 <script type="text/javascript" src="js/jquery.mousewheel.m.js"></script>
 <script type="text/javascript" src="js/jquery.sudySlider.m.js"></script>
 <script type="text/javascript" src="js/leader.js"></script>
+<script type="text/javascript" src="js/test.js"></script>
 </body>
 </html>
