--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <!-- footer -->
 <div class="S_footer">
 	<div class="S_word">
-		<a href=""><img src="image/git1.png"/></a>
+		<a href="https://github.com/Jikewang-Studio"><img src="image/git1.png"/></a>
 	</div>
 	<div class="S_wechat">
 		<img src="image/weixin.jpg"/>
