--- a/back-end/back-end.html
+++ b/back-end/back-end.html
@@ -53,7 +53,7 @@
 	<!-- 工作室成员 -->
 	<div class="head">
 		<li class="logo">Geek</li>
-		<li class="userName">wlf</li>
+		<li class="userName">后台管理</li>
 	</div>
 	<div class="main">
 		<div class="nav">
@@ -90,6 +90,7 @@
 
 		<!-- 工作室成员 -->
 		<div id="showmem" class="active">
+	<!-- 	<iframe src="test1.html" width="100%" height="700px;"></iframe> -->
 			<div class="show_head">
 				<span>
 					输入学号<input type="text" id="search">
@@ -103,7 +104,7 @@
 			</div>
 			<div class="page">		
 			</div>
-		</div>
+		</div> 
 		<!-- 毕业去向 -->
 		<div id="showhere" class="tab">
 			<div class="show_head">
@@ -167,9 +168,9 @@
 		</div>
 	</div>
 	<div class="mask"></div>
+	<script type="text/javascript" src="js/member.js"></script> 
 	<script type="text/javascript" src="js/graduate.js"></script>
 	<script type="text/javascript" src="js/log.js"></script>
-	<script type="text/javascript" src="js/member.js"></script>
 	<script type="text/javascript" src="js/work.js"></script>
 	<script type="text/javascript" src="js/join.js"></script>
 </body>
