--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
 	<title>index</title>
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" type="text/css" href="css/form.css">
@@ -31,7 +32,7 @@
 
 <!-- 加入我们 -->
 <div class="form">
-	<div class="index">
+	<div id="index">
 		<span>加入我们</span>
 	</div>
 	<!-- 加入我们表单 -->
@@ -69,10 +70,10 @@
 <div id="SXH">
 	<div class="S_banner">
 	    <div class="S_geek" id="S_geek">
-	    	<p>Geek</p>
+	    	<!-- <p>Geek</p> -->
 	    </div>
 		<div class="S_wait">
-			<p>we wait for you</p>
+			<!-- <p>we wait for you</p> -->
 		</div>
 	</div>
 	<div style="width:100%; height:500px; overflow:hidden;">
@@ -80,27 +81,27 @@
 	        <ul>
 	            <li>
 	                <a href="#" target="_blank">
-	                    <img src="image/S_xinbanner00.jpg" width="100%" height="500" alt="#">
+	                    <img src="image/geek1.jpg" width="100%" height="500" alt="#">
 	                </a>
 	            </li>
 	            <li>
 	                <a href="#" target="_blank">
-	                    <img src="image/S_xinbanner00.jpg" width="100%" height="500" alt="#">
+	                    <img src="image/geek2.jpg" width="100%" height="500" alt="#">
 	                </a>
 	            </li>
 	            <li>
 	                <a href="#" target="_blank">
-	                    <img src="image/S_xinbanner00.jpg" width="100%" height="500" alt="#">
+	                    <img src="image/geek3.jpg" width="100%" height="500" alt="#">
 	                </a>
 	            </li>
 	            <li>
 	                <a href="#" target="_blank">
-	                    <img src="image/S_xinbanner00.jpg" width="100%" height="500" alt="#">
+	                    <img src="image/geek5.jpg" width="100%" height="500" alt="#">
 	                </a>
 	            </li>
 	            <li>
 	                <a href="#" target="_blank">
-	                    <img src="image/S_xinbanner00.jpg" width="100%" height="500" alt="#">
+	                    <img src="image/geek7.jpg" width="100%" height="500" alt="#">
 	                </a>
 	            </li>
 	        </ul>
@@ -283,7 +284,7 @@
 <script type="text/javascript" src="js/nav.js"></script>
 <script type="text/javascript" src="js/nav1.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
-<script src="js/shouye.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/shouye.js"></script>
 <script type="text/javascript" src="js/aboutUs.js"></script>
 <script type="text/javascript" src="js/aboutMember.js"></script>
 <script type="text/javascript" src="js/graduate.js"></script>
