--- a/进度文档/李文浩/saveCandidate.html
+++ b/进度文档/李文浩/saveCandidate.html
@@ -37,7 +37,7 @@
 			}
 			sub.onclick=function(){
 				var xhr=new XMLHttpRequest();
-				xhr.open("post","/candidate/saveCandidate");
+				xhr.open("post","/home/saveCandidate");
 				var data="candidateId="+document.getElementById("candidateId").value
 						+"&name="+document.getElementById("name").value
 						+"&school="+document.getElementById("school").value
